# Todo-Full-Stack-Web-Application

./: .gitignore  BACKEND_DEPLOYMENT.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  RAILWAY_DEPLOY.md  README.md  app.py  docker-compose.yml  integration_test.py  package-lock.json  railway.json  render.yaml  requirements.txt  test_integration_flow.py  vercel.json
.claude/: settings.local.json
.claude/agents/: python-api-backend.md  (+2 more)
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  SETUP.md  pyproject.toml  requirements.txt  test_integration.py
backend/app/: .gitignore  Dockerfile  TESTS.md  __init__.py  auth.py  database.py  main.py  requirements.txt  start.sh
backend/app/models/: __init__.py  requests.py  responses.py  task.py  user.py
backend/app/routes/: __init__.py  auth.py  tasks.py
backend/migrations/: 001_initial_schema.sql  001_initial_schema_rollback.sql  README.md
backend/src/: main.py
backend/src/agents/: todo_agent.py
backend/src/api/: auth.py  chat.py  tasks.py
backend/src/models/: __init__.py
backend/src/services/: database.py  mcp_server.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_contracts.py  test_database.py  test_models.py  test_tasks.py
frontend/: .env.example  .env.local.example  CLAUDE.md  CONTRIBUTING.md  DEBUG_BLINKING.md  IMPLEMENTATION_SUMMARY.md  PHASE_4_COMPLETION.md  QUICKSTART.md  README.md  dev-output.txt  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
(+147 files in other folders)
